# kanot

./: .gitignore  .preludeignore  LICENCE  README.md  promptbuild.sh  pyproject.toml
backend/: local_database.db  pyproject.toml  start.py
backend/kanot/: main.py  models.py  test_config.py
backend/kanot/db/: crud.py  schema.py
backend/kanot/tests/: conftest.py  test_config.py  test_crud.py  test_main.py  test_schema.py
backend/notebooks/: 1_build_db.ipynb
backend/tests/: test_main.py
frontend/: global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  app.d.ts  clickOutside.js  main.js
frontend/src/components/: AddCodeForm.svelte  AnnotationDropdown.svelte  BatchAnnotationModal.svelte  CodeList.svelte  EditCodeModal.svelte  FilterDropdown.svelte  SearchBar.svelte  SelectedFilters.svelte
frontend/src/layout/: Layout.svelte
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: AddCodeForm.svelte  CodeList.svelte  (+11 more)
frontend/src/routes/: +layout.svelte  +page.svelte  Codes.svelte  Content.svelte
frontend/src/stores/: codeStore.js  elementStore.js
frontend/src/utils/: api.js  clickOutside.js  helpers.js
frontend/test-results/: .last-run.json
frontend/tests/: test.ts
kanot/: main.py
kanot/db/: crud.py  schema.py
kanot/tests/: test_crud.py  test_schema.py
notebooks/: 1_build_db.ipynb
scripts/: populate_test_db.py
typings/kanot/: main.pyi
typings/kanot/db/: crud.pyi  schema.pyi
typings/kanot/tests/: test_config.pyi  test_main.pyi
(+8 files in other folders)
