[tool.poetry]
name = "kanot"
version = "0.1.0"
description = ""
authors = ["aerugo <hugiasgeirsson@gmail.com>"]
readme = "README.md"
packages = [{include = "kanot"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {version = "^2.7.3"}
python-dotenv = {version = "^1.0.0"}
langchain = "^0.2.1"
openai = "^1.30.1"
langchain-openai = "^0.1.7"
asyncio = "^3.4.3"
nest-asyncio = "^1.6.0"
mypy = "^1.10.0"
langchain-community = "^0.2.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
setuptools = "^70.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^24.4"
mypy = "^1.0"
pylama = "^8.3.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.pylama]
linters = "mypy,pycodestyle,pyflakes"

[tool.mypy]
ignore_missing_imports = true